--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta name="viewport"
+  <meta 
+  name="viewport"
   content="user-scalable=no" 
   charset="utf-8">
   <title>Drum Kit</title>
@@ -23,13 +24,13 @@
   <h1 id="title">Drum 🥁 Kit</h1>
 
   <div class="set">
-    <button class="w drum">w</button>
-    <button class="a drum">a</button>
-    <button class="s drum">s</button>
-    <button class="d drum">d</button>
-    <button class="j drum">j</button>
-    <button class="k drum">k</button>
-    <button class="l drum">l</button>
+    <button class="w drum disable-dbl-tap-zoom">w</button>
+    <button class="a drum disable-dbl-tap-zoom">a</button>
+    <button class="s drum disable-dbl-tap-zoom">s</button>
+    <button class="d drum disable-dbl-tap-zoom">d</button>
+    <button class="j drum disable-dbl-tap-zoom">j</button>
+    <button class="k drum disable-dbl-tap-zoom">k</button>
+    <button class="l drum disable-dbl-tap-zoom">l</button>
   </div>
 
   <script src="index.js">
@@ -37,7 +38,6 @@
   </script>
 
   <footer>
-    <!-- Made with ❤️ in London. -->
   </footer>
 </body>
 
